QR code widget started.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -58852,6 +58852,9 @@
         }
       }
     },
+    "QR code" : {
+
+    },
     "Quick buttons" : {
       "localizations" : {
         "de" : {
