Warning toast when flame turns red.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -5543,6 +5543,9 @@
         }
       }
     },
+    "🔥 Flame is red 🔥" : {
+
+    },
     "🤟 Stream ended 🤟" : {
       "localizations" : {
         "de" : {
