--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -77986,7 +77986,7 @@
         }
       }
     },
-    "The watch acts as a remote control assistant as soon as a remote control streamer is connected. Please note that in this case, chat is not (yet) available." : {
+    "The watch acts as remote control assistant when the remote control streamer is connected. Please note that in this case, chat, skip current TTS and a few other features are not (yet) supported." : {
 
     },
     "The zoom (in X) to set when switching to given camera, if enabled." : {
