UI styling. Fewer inline pickers.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -85687,6 +85687,7 @@
       }
     },
     "Video stabilization sometimes gives audio-video sync issues." : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
