--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -68339,6 +68339,9 @@
         }
       }
     },
+    "Size" : {
+
+    },
     "sk_us-west-2_okfef49k34k_34g59gGDDHGHSREj754gYJYTJERH" : {
       "localizations" : {
         "de" : {
