Optionally switch to OBS BRB scene when SRT(LA) or RTMP video sources are broken i current scene.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -18679,6 +18679,9 @@
         }
       }
     },
+    "BRB scene when video source is broken" : {
+
+    },
     "Browser" : {
       "localizations" : {
         "de" : {
@@ -50938,6 +50941,9 @@
           }
         }
       }
+    },
+    "Moblin will switch to the BRB scene configured above when the current scene's video source is broken. Typically enable when using Moblin as SRT(LA) server at home, streaming to OBS on the same computer." : {
+
     },
     "moblin:// deep links can be used to import some settings, often using QR codes or a browser. See https://github.com/eerimoq/moblin for details." : {
       "localizations" : {
