DJI camera controller started.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -28308,7 +28308,7 @@
         }
       }
     },
-    "DJI remote control" : {
+    "DJI controller" : {
 
     },
     "Do not say messages that are likely spam or bot commands." : {
