--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -8403,6 +8403,9 @@
         }
       }
     },
+    "a device" : {
+
+    },
     "A large number. Use developer tools (F11) in your browser. Look at websocket messages." : {
       "localizations" : {
         "de" : {
@@ -23232,9 +23235,6 @@
         }
       }
     },
-    "Control and monitor DJI devices. WIP!" : {
-
-    },
     "Control and monitor Moblin from another device." : {
       "localizations" : {
         "de" : {
@@ -28308,7 +28308,10 @@
         }
       }
     },
-    "DJI controller" : {
+    "DJI device" : {
+
+    },
+    "DJI devices" : {
 
     },
     "Do not say messages that are likely spam or bot commands." : {
