--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -8403,9 +8403,6 @@
         }
       }
     },
-    "a device" : {
-
-    },
     "A large number. Use developer tools (F11) in your browser. Look at websocket messages." : {
       "localizations" : {
         "de" : {
@@ -23235,6 +23232,9 @@
         }
       }
     },
+    "Control and monitor DJI devices. WIP!" : {
+
+    },
     "Control and monitor Moblin from another device." : {
       "localizations" : {
         "de" : {
@@ -28308,10 +28308,7 @@
         }
       }
     },
-    "DJI device" : {
-
-    },
-    "DJI devices" : {
+    "DJI controller" : {
 
     },
     "Do not say messages that are likely spam or bot commands." : {
